--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title:          Tale
 description:    "Minimal Jekyll theme for storytellers"
 baseurl:        "/tale"
-url:            "https://yusufgurdogan.github.io"
+url:            "https://nano-trade.github.io"
 
 # Google Analytics
 google_analytics: UA—XXXXXXXX-X
