Add Kuyumcu Update post
and;
- delete other posts
- change favicon
- edit config

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title:          Tale
+title:          nano.trade
 description:    "Minimal Jekyll theme for storytellers"
 url:            "https://nano-trade.github.io"
 
