--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ google_analytics: UA—XXXXXXXX-X
 
 # Author
 author:
-  name:         Yusuf Gürdoğan
+  name:         nano.trade
   url:          https://blog.nano.trade
   email:        example@mail.com
 
